k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-api-svc
  labels:
    type: service
spec:
  type: NodePort
  selector:
    type: service
  ports:
    - name: default
      port: 80
      protocol: TCP
      nodePort: 31234
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-api
  labels:
    type: service
spec:
  replicas: 1
  selector:
    matchLabels:
      type: service
  template:
    metadata:
      labels:
        type: service
    spec:
      containers:
      - image: piotrzan/go-sample-api:v1
        name: go-api
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
